# checkmate

./: .gitignore  Cargo.toml  LICENSE
src/: camera.rs  cli.rs  config.rs  diagnostics.rs  follow.rs  main.rs  old.rs  state.rs  utils.rs
src/camera/: panorbit.rs  simple.rs
src/state/: hangar.rs  ingame.rs
src/state/ingame/: aircraft.rs  animation.rs  engine.rs  terrain.rs
