[package]
name = "checkmate"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

    [profile.dev.package."*"]
    opt-level = 3


[dependencies]
bevy = { version = "0.16", features = ["serialize", "jpeg", "tga"] }
bevy_obj = "0.16"
clap = { version = "4.5", features = ["derive"] }
config-load = "0.1"
derive_more = { version = "2.0", features = ["debug"] }
iyes_perf_ui = "0.5"
fastrand = "2"
serde = { version = "1.0", features = ["derive"] }
